k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-there-dev
  labels:
    name: hello-there-dev
